--- a/frontend/ibk-manager/src/app/globals.css
+++ b/frontend/ibk-manager/src/app/globals.css
@@ -19,3 +19,20 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.admin-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+.admin-header img {
+  margin-right: auto;
+}
+
+.admin-header h1 {
+  margin: 0;
+  white-space: nowrap;
+}
